.happypack/s--930213995
/Users/dongfanai/Desktop/project/kr-admin/src/Containers/Permission/Operations/Createdialog/index.js: Unexpected token, expected ; (153:9)
SyntaxError: /Users/dongfanai/Desktop/project/kr-admin/src/Containers/Permission/Operations/Createdialog/index.js: Unexpected token, expected ; (153:9)
[0m [90m 151 | [39m}
 [90m 152 | [39m
[31m[1m>[22m[39m[90m 153 | [39mrender() {
 [90m     | [39m         [31m[1m^[22m[39m
 [90m 154 | [39m	let {
 [90m 155 | [39m		error[33m,[39m
 [90m 156 | [39m		handleSubmit[33m,[39m[0m
    at Parser.pp$5.raise (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:4246:13)
    at Parser.pp.unexpected (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1627:8)
    at Parser.pp.semicolon (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1608:38)
    at Parser.pp$1.parseExpressionStatement (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:2103:8)
    at Parser.parseExpressionStatement (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5240:20)
    at Parser.pp$1.parseStatement (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1779:17)
    at Parser.parseStatement (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5218:22)
    at Parser.pp$1.parseBlockBody (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:2133:21)
    at Parser.pp$1.parseTopLevel (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1645:8)
    at Parser.parse (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1537:17)
    at Object.parse$1 [as parse] (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6466:37)
    at File.parse (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/file/index.js:479:24)
    at File.parseCode (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/file/index.js:568:20)
    at /Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/pipeline.js:48:12
    at File.wrap (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/file/index.js:528:16)
    at Pipeline.transform (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/pipeline.js:46:17)
    at transpile (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.2.4@babel-loader/index.js:14:22)
    at /Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.2.4@babel-loader/lib/fs-cache.js:145:18
    at ReadFileContext.callback (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.2.4@babel-loader/lib/fs-cache.js:28:23)
    at FSReqWrap.readFileAfterOpen [as oncomplete] (fs.js:365:13)